2010-07-28  Dale Ragan  <dale.ragan@sinesignal.com>

	* MonoDevelop.VersionControl.Git.addin.xml: Fixed 
	  typo and issue with add-in not loading due to bad 
      extension for adding the Switch to Branch label.

	* MonoDevelop.VersionControl.Git/Commands.cs: Fixed 
	  a small typo.

2010-07-27  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.VersionControl.Git/GitRepository.cs: Remove
	  debug output.

	* MonoDevelop.VersionControl.Git/GitVersionControl.cs: Added
	  missing null check.

2010-07-27  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* gtk-gui/gui.stetic:
	* gtk-gui/generated.cs:
	* MonoDevelop.VersionControl.Git.csproj:
	* MonoDevelop.VersionControl.Git.addin.xml:
	* MonoDevelop.VersionControl.Git/Commands.cs:
	* MonoDevelop.VersionControl.Git/PushDialog.cs:
	* MonoDevelop.VersionControl.Git/GitRepository.cs:
	* gtk-gui/MonoDevelop.VersionControl.Git.PushDialog.cs:
	  Implement push command.

2010-07-27  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.VersionControl.Git.csproj:
	* MonoDevelop.VersionControl.Git.addin.xml:
	* MonoDevelop.VersionControl.Git/GitRepository.cs:
	* MonoDevelop.VersionControl.Git/GitVersionControl.cs: Add
	  basic support for git.

2010-06-30  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.VersionControl.Git.csproj: Make MD refs private.
	  Should fix running on .NET.

2010-06-28  Dale Ragan  <dale.ragan@sinesignal.com>

	* Makefile.am:
	* MonoDevelop.VersionControl.Git.csproj:
	* AssemblyInfo.cs:
	* MonoDevelop.VersionControl.Git.addin.xml:
	* MonoDevelop.VersionControl.Git/GitClient.cs:
	* MonoDevelop.VersionControl.Git/GitVersionControl.cs:
	* MonoDevelop.VersionControl.Git/GitRepository.cs:
	  Official kickoff of the 'Support for Git' task.  This 
	  is mainly a skeleton and no functionality.  The add-in 
	  is recognized by MonoDevelop and the Version Control add-in 
	  sees the new Git Version Control System.  Of course it 
	  doesn't show up in the drop down, due to the 